[metadata]
name = NowPlaying
license_file = LICENSE.txt

[options]
include_package_data = True
packages = nowplaying
install_requires =
  aiofiles==22.1.0
  aiohttp==3.8.3
  aiosqlite==0.18.0
  discord.py==2.1.0
  diskcache==5.4.0
  jinja2==3.1.2
  lxml==4.9.2
  netifaces==0.11.0
  musicbrainzngs==0.7.1
  netifaces==0.11.0
  normality==2.4.0
  nltk==3.8.1
  pillow==9.4.0
  pyacoustid==1.2.2
  pypresence==4.2.1
  PySide6==6.4.2
  requests==2.28.2
  requests-cache==0.9.8
  simpleobsws==1.3.1
  tinytag==1.8.1
  twitchAPI==3.6.2
  urllib3==1.26.14
  url_normalize==1.4.3
  versioneer
  watchdog==2.2.1
  #
  # audio-metadata and tbm-utils (install these from requirements.txt)
  #
  attrs
  bidict
  bitstruct
  more-itertools
  pprintpp
  wrapt
  #
  # discogs_client
  #
  oauthlib==3.2.2
  python-dateutil

[options.entry_points]
console_scripts =
  NowPlaying = nowplaying:main
pyinstaller40 =
  hook-dirs = nowplaying.__pyinstaller:get_hook_dirs

[options.package_data]
nowplaying = templates/*, resources/*

[versioneer]
VCS = git
style = pep440
versionfile_source = nowplaying/version.py
versionfile_build = nowplaying/version.py
tag_prefix = ''
