[metadata]
name = NowPlaying
license_file = LICENSE.txt

[options]
include_package_data = True
packages = nowplaying
install_requires =
  aiofiles==23.1.0
  aiohttp==3.8.4
  aiosqlite==0.18.0
  discord.py==2.2.2
  diskcache==5.4.0
  jinja2==3.1.2
  lxml==4.9.2
  musicbrainzngs==0.7.1
  netifaces==0.11.0
  nltk==3.8.1
  normality==2.4.0
  pid==3.0.4
  pillow==9.4.0
  pyacoustid==1.2.2
  pypresence==4.2.1
  PySide6==6.4.2
  requests-cache==1.0.0
  requests==2.28.2
  simpleobsws==1.3.1
  tinytag==1.8.1
  twitchAPI==3.9.0
  url_normalize==1.4.3
  urllib3==1.26.15
  versioneer
  watchdog==3.0.0
  #
  # audio-metadata and tbm-utils (install these from requirements.txt)
  #
  attrs
  bidict
  bitstruct
  more-itertools
  pprintpp
  wrapt
  #
  # discogs_client
  #
  oauthlib==3.2.2
  python-dateutil

[options.entry_points]
console_scripts =
  NowPlaying = nowplaying:main
pyinstaller40 =
  hook-dirs = nowplaying.__pyinstaller:get_hook_dirs

[options.package_data]
nowplaying = templates/*, resources/*

[versioneer]
VCS = git
style = pep440
versionfile_source = nowplaying/version.py
versionfile_build = nowplaying/version.py
tag_prefix = ''
